# AzerothOnTape

./: AzerothOnTapeSettingsDialog.cpp  AzerothOnTapeSettingsDialog.hpp  CMakeLists.txt  FileDownloader.cpp  FileDownloader.hpp  LICENSE  README.md  appveyor.yml  azerothontape.pro  azerothontape.qrc  main.cpp
AddOns/AzerothOnTape/: AzerothOnTape.lua  AzerothOnTape.toc  AzerothOnTape.xml  Bindings.xml
cmake/macos/: Info.plist
images/: AzerothOnTape.icns
installer/config/: config.xml
src/: AzerothOnTapeSettingsDialog.cpp  AzerothOnTapeSettingsDialog.hpp  FileDownloader.cpp  FileDownloader.hpp  main.cpp
src/utils/: Utils.hpp
src/utils/mac/: Utils.cpp
src/utils/win/: Utils.cpp
